--- a/nav.css
+++ b/nav.css
@@ -204,7 +204,7 @@ section{
 
 .skill-php {
     animation: progress-php 2s ease-in-out;
-    background: linear-gradient(to right, #dbea38, #07ce5d);
+    background: linear-gradient(to right,  #07ce5d, #FFD700);
     width: 50%;
 }
 
@@ -213,7 +213,11 @@ section{
     background: linear-gradient(to right, #00BFFF, #3b228b);
     width: 60%;
 }
-
+.skill-vue {
+    animation: progress-mysql 2s ease-in-out;
+    background: linear-gradient(to right, #3b228b, #ff1e9e);
+    width: 40%;
+}
 
 /* skill Animation */
 
@@ -488,6 +492,28 @@ text-align: center;
 
 #result div:not(:last-child){
     border-right: 1px solid black;
+}
+
+/* 圖8 - React - 商城 */
+.shop{
+    display: flex;
+    flex-direction: column;
+    padding-left: 10%;
+    padding-right: 10%;
+    line-height: 20px;
+}
+.shop-title{
+text-align: center;
+}
+
+.shop-intro{
+    padding-left: 8%;
+    font-weight: 400;    
+}
+
+.shop-timeline{
+    color: rgb(198, 181, 181);
+    font-size: 10px;
 }
 
 
