--- a/nav.css
+++ b/nav.css
@@ -181,6 +181,7 @@ section{
     animation: progress-html 2s ease-in-out;
     background: linear-gradient(to right, #f89e59, #FF4500);
     width: 80%;
+    /* animation-iteration-count: infinite; */
 }
 
 .skill-css {
